Fix: `GasStationCard` replace unreadable size with var

--- a/src/modules/dashboard/components/GasStation/GasStationCard/GasStationCard.css
+++ b/src/modules/dashboard/components/GasStation/GasStationCard/GasStationCard.css
@@ -209,7 +209,7 @@
    * Because of this, we must *heavily* use negative margins to align text properly.
    */
   margin: -1px 0 -12px 14px;
-  font-size: 10px;
+  font-size: var(--size-unreadable);
   font-weight: var(--weight-medium);
   color: var(--danger);
 }
